<resources>
    <string name="app_name">Call Bell</string>
    <string name="action_settings">Settings</string>
    <string name="station">Station</string>
    <string name="bed">Bed</string>
    <string name="title_activity_bed_mode">BedModeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">help</string>
    <string name="pain">pain</string>
    <string name="blanket">Warm Blanket</string>
    <string name="food_water">Food / Water</string>
    <string name="restroom">Restroom</string>
    <string name="call_bell_title">Need Help?</string>
    <string name="hospital_name">Enter Hospital</string>
    <string name="location_hint">Enter Location</string>
    <string name="group_name">Enter Group</string>
    <string name="call_bell_alarm_title">Someone\'s Calling</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="dismiss">Dismiss</string>
    <string name="staff_physician">Physician</string>
    <string name="staff_nurse">Nurse</string>
    <string name="staff_resident">Resident:</string>
    <string name="admin_mode">Admin Mode</string>
    <string name="su_enter_alarm_title">Enter Admin Password</string>
    <string name="user_mode">User Mode</string>
    <string name="title_activity_plan_of_care">PlanOfCareActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="incorrect_password">Sorry, that password was incorrect</string>
    <string name="nurse_chief_complaint">Chief Complaint</string>
    <string name="other">Other</string>
    <string name="add">Add</string>
    <string name="empty_action_item">The action Item is empty</string>
    <string name="duplicate_item">This is a duplicate item</string>
    <string name="abdominal_pain">Abdominal Pain</string>
    <string name="arm_pain">Arm Pain</string>
    <string name="asthma">Asthma</string>
    <string name="urinalysis">Urinalysis</string>
    <string name="iv">IV</string>
    <string name="pain_medication">Pain Medication</string>
    <string name="nausea_medication">Nausea Medication</string>
    <string name="ct_scan">CT Scan</string>
    <string name="ultrasound">Ultrasound</string>
    <string name="x_ray">X-ray</string>
    <string name="urology_consult">Urology Consult</string>
    <string name="headache">Headache</string>
    <string name="medical_evaluation">Medical Evaluation</string>
    <string name="cbc">CBC</string>
    <string name="bmp">BMP</string>
    <string name="inr">INR</string>
    <string name="lactic_acid">Lactic Acid</string>
    <string name="iv_therapy">IV Therapy</string>
    <string name="iv_fluid">IV Fluid</string>
    <string name="mri">MRI</string>
    <string name="neurosurgery_consult">Neurosurgery Consult</string>
    <string name="neurology_consult">Neurology Consult</string>
    <string name="leg_pain">Leg Pain</string>
    <string name="cmp">CMP</string>
    <string name="esr">ESR</string>
    <string name="d_dimer">D-Dimer</string>
    <string name="c_reactive_protein">C-Reactive Protein</string>
    <string name="uric_acid">Uric Acid</string>
    <string name="ultrasound__">Ultrasound  </string>
    <string name="pregnancy_problems">Pregnancy Problems</string>
    <string name="hcg">HCG</string>
    <string name="pelvic_exam">Pelvic Exam</string>
    <string name="obgyn_consult">OBGYN consult</string>
    <string name="rectal_bleeding">Rectal Bleeding</string>
    <string name="type_screen">Type &amp; Screen</string>
    <string name="blood_transfusion">Blood Transfusion</string>
    <string name="chest_x_ray">Chest X-ray</string>
    <string name="shortness_of_breath">Shortness of Breath</string>
    <string name="ekg">EKG</string>
    <string name="oxygen">Oxygen</string>
    <string name="troponin">Troponin</string>
    <string name="bnp">BNP</string>
    <string name="blood_gas">Blood Gas</string>
    <string name="iv_placement">IV Placement</string>
    <string name="echo">ECHO</string>
    <string name="nebulizer_treatment">Nebulizer Treatment</string>
    <string name="peak_flow_meter">Peak Flow Meter</string>
    <string name="inpatient_consult">Inpatient Consult</string>
    <string name="slurred_speak">Slurred Speak</string>
    <string name="ammonia">Ammonia</string>
    <string name="finger_stick">Finger Stick</string>
    <string name="swallow_screen">Swallow Screen</string>
    <string name="testicular_pain">Testicular Pain</string>
    <string name="foley_catheter">Foley Catheter</string>
    <string name="vaginal_bleeding">Vaginal Bleeding</string>
    <string name="altered_mental_status">Altered Mental Status</string>
    <string name="ethanol">Ethanol</string>
    <string name="lipase">Lipase</string>
    <string name="amylase">Amylase</string>
    <string name="flu_screening">Flu screening</string>
    <string name="cat_scan">Cat Scan</string>
    <string name="vomiting_blood">Vomiting Blood</string>
    <string name="antacid_medication">Antacid Medication</string>
    <string name="gi_consult">GI Consult</string>
    <string name="nausea_vomiting_diarrhea">Nausea/Vomiting/Diarrhea</string>
    <string name="medical_evaluation_inr">Medical Evaluation INR</string>
    <string name="stool_culture">Stool Culture</string>
    <string name="lft">LFT’s</string>
    <string name="laceration">Laceration</string>
    <string name="tetanus_shot">Tetanus Shot</string>
    <string name="stitches">Stitches</string>
    <string name="eye_injury">Eye Injury</string>
    <string name="eye_drops">Eye Drops</string>
    <string name="eye_irrigation">Eye Irrigation</string>
    <string name="antibiotics">Antibiotics</string>
    <string name="leg_swelling">Leg Swelling</string>
    <string name="facial_swelling">Facial Swelling</string>
    <string name="allergic_reaction">Allergic Reaction</string>
    <string name="monitor">Monitor</string>
    <string name="palpitations">Palpitations</string>
    <string name="echocardiogram">Echocardiogram (EKG)</string>
    <string name="pt">PT</string>
    <string name="ptt_inr">PTT/INR</string>
    <string name="repeat_troponin">Repeat Troponin</string>
    <string name="stress_test">Stress Test</string>
    <string name="holter_monitor">Holter Monitor</string>
    <string name="cardiology_consult">Cardiology Consult</string>
    <string name="rash">Rash</string>
    <string name="iv_insertion">IV Insertion</string>
    <string name="overdose">Overdose</string>
    <string name="acetaminophen_level">Acetaminophen Level</string>
    <string name="aspirin_level">Aspirin Level</string>
    <string name="social_work_consult">Social Work Consult</string>
    <string name="abnormal_labs">Abnormal Labs</string>
    <string name="tsh">TSH</string>
    <string name="crp">CRP</string>
    <string name="back_pain">Back Pain</string>
    <string name="blood_in_urine">Blood in Urine</string>
    <string name="flank_pain">Flank Pain</string>
    <string name="chest_pain">Chest Pain</string>
    <string name="back">Back</string>
    <string name="medical_evalutation_description">
        This examination is done by a physician or qualified healthcare provider.
        It is done to evaluate the body for signs or symptoms of disease, injury or illness.
        Prior medical conditions as well as current symptoms you may be experiencing will all
        help theprovider in concentrating their focus on specific blood tests, imaging or
        medication to treat your current problems.
    </string>
    <string name="cbc_description">
        (Complete Blood Count) This is a blood test is used to assess your overall health.  It’s commonly performed during any exam by a health provider and checks for infection, decreased blood counts, and other diseases.
    </string>
    <string name="bmp_description">
        (Basic Metabolic Panel or Electrolyte Panel)  This is a blood test used to assess the overall health of your kidneys (creatinine and BUN), blood sugar levels (glucose), as well as electrolytes in your body such as potassium (K), Sodium (Na), and Calcium (Ca).
    </string>
    <string name="inr_description">
        (Standardized Prothrombin time)  This blood test is calculated using a prothrombin time test and is used to regulate how fast your blood is clotting.  A person taking blood thinners will be monitoring their INR test on a regular basis to make sure it is within the range your physician thinks is therapeutic for your condition.
    </string>
    <string name="cmp_description">
         (Comprehensive Metabolic Panel)-  This blood test is routinely performed as part of your physical exam by your physician in evaluating overall health.  It includes 10+ tests that asses your body’s electrolyte balance as well as test for kidney disease, liver disease and diabetes.
    </string>
    <string name="lipase_description">
        (Serum lipase) this blood test measures an enzyme produced by your pancreas which is called lipase.  Elevated levels of lipase suggest pancreatitis or inflammation of your pancreas.  Signs and symptoms of pancreatitis may include abdominal pain, nausea, vomiting and fever.
    </string>
    <string name="esr_description">
        (Erythrocyte Sedimentation Rate, Sed Rate)  This blood test is performed to evaluate for a disease process inside your body.  Healthcare providers may use this to test for inflammation, pain, swelling or even arthritis.  It is not specific to a certain disease process, it only tells the healthcare provider if you may have a an active disease process.
    </string>
    <string name="d_dimer_description">
        (Fibrin Degradation Fragment)  This blood test is used to rule out a blood clot.  When a blood clot forms in your body, the clot releases a substance called D-Dimer into the blood stream.   If your healthcare provider suspects you have a blood clot such as a DVT (deep vein thrombosis) or a PE (pulmonary embolism), it’s likely they will perform this test before more advanced tests.  Symptoms of a blood clot include leg swelling, arm swelling, shortness of breath or a faster than normal heart beat
    </string>
    <string name="troponin_description">
        (Cardiac Troponin)  This blood test checks to see if you’ve had damage to your heart or are having a heart attack.  A decrease of oxygen to your heart can cause your heart to release an enzyme called troponin.  A healthcare provider may perform this test if you’ve had an chest pain, an abnormal EKG, chronic or acute heart failure or an infection in your heart muscle.
    </string>
    <string name="amylase_description">
        This blood test is used to diagnose or manage pancreatitis, appendicitis, eating disorders or infections.  This test is commonly ordered in conjunction with Lipase, LFTs (liver function tests) and hematocrit tests.  Elevated amylase levels are commonly associated with acute pancreatitis, swelling in your abdomen, ulcers, intestine blockages, sudden gallbladder swelling, alcohol use and other acute problems.
    </string>
    <string name="stool_culture_description">
         (stool sample)  This test is a collection of your stool.  It is used to test for sources of digestive tract infections.  Symptoms which may require stool cultures include diarrhea, severe abdominal pain, or blood in stool.
    </string>
    <string name="lft_description">
        (hepatic function test, liver function test)  This is a blood test that checks the general health of your liver.  Your liver is a large organ in your abdomen that turns food into nutrients and energy.  You may need this test done if you have signs or symptoms such as urine that is very dark in color, abdominal discomfort, fatigue, skin that has turned slightly yellow, or darker than normal stool color (tarry colored bowel movements).
    </string>
</resources>